<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="application_name">Moboost</string>
    <string name="main_share">Share</string>
    <string name="facebook_app_id">192549401136987</string>
    <string name="banner_home_footer">ca-app-pub-9480918527727973/6799620841</string>
    <string name="interstitial_full_screen">ca-app-pub-9480918527727973/5183286843</string>
    <string name="ad_unit_id">ca-app-pub-9480918527727973/8136753243</string>
    <string name="action_password">Password Change</string>
    <string name="draw_pattern">Draw Pattern to Unlock</string>
    <string name="rate_us">Rate us</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="check">Check</string>
    <string name="please_check_internet">Please check your Internet Connection</string>
    <string name="message_1">Install and open QuickPick to get 1.0000 GB of free cloud space</string>
    <string name="cm_account">Sign Up For A CM Account</string>
    <string name="get_2_gb">Get 2GB Private Cloud Space</string>
    <string name="uninstall">UNINSTALL</string>
    <string name="apk_files">APK FILES</string>
    <string name="move">MOVE</string>
    <string name="antivirus">ANTIVIRUS</string>
    <string name="draining_fast">Draining fast,optimizing to save 5 mins.</string>
    <string name="hybernate_app">Hybernate apps to boost battery</string>
    <string name="recommended_app">Recommended to keep awake</string>
    <string name="one_app">1 App</string>
    <string name="recommended_to_keep_awake">Recommended to keep awake</string>
    <string name="optimize">OPTIMIZE 1</string>
    <string name="status_devicesConnected">Devices Connected:</string>
    <string name="cpu_cooler">CPU COOLER</string>
    <string name="cpu_temp">CPU temperature is OK</string>
    <string name="cool_the_cpu">Cool the CPU further</string>
    <string name="clean_running_apps">Clean 3 running apps</string>
    <string name="cool_down">COOL DOWN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="get_gb">GET 1,000GB</string>
    <string name="clean_junk">Clean junk to free up space,boost speed and save battery life for your android.</string>
    <string name="settings">SETTINGS</string>
    <string name="notification">NOTIFICATION</string>
    <string name="notification_toggle">Notification Toggle</string>
    <string name="text">Text First</string>
    <string name="notfication_settings">Nofification Settings</string>
    <string name="i_swipe">iSWIPE</string>
    <string name="i_swipe_settings">iSwipe Settings</string>
    <string name="active_area">Active area position options</string>
    <string name="floating_widget">Floating Widget</string>
    <string name="floating_widget_settings">Floating Widget Settings</string>
    <string name="magic_sweep_options">Magic Sweep Options</string>
    <string name="information">Information</string>
    <string name="btn_gallery_image">Image</string>
    <string name="btn_gallery_video">Video</string>
    <string name="empty"></string>
    <string name="CM_Family">MB House</string>
    <string name="phone_boost">PHONE BOOST</string>
    <string name="junked_std">JUNKED STANDARD</string>
    <string name="title_activity_about">About</string>
    <string name="cannot_read_directory_s">Cannot read directory %s</string>
    <string name="open_file_with_">Open %s with:</string>
    <string name="size_s">Size: %s</string>
    <string name="folder">%d items</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="remove_favourite">Remove favourite</string>
    <string name="folder_empty">Empty folder</string>
    <string name="delete">Delete</string>
    <string name="_d_objects">%d objects</string>
    <string name="delete_d_items_">Delete %d items?</string>
    <string name="select_all">Select All</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="_d_files_deleted">%d files deleted</string>
    <string name="add_to_homescreen">Create shortcut</string>
    <string name="add_to_homescreen_multiple">Create shortcuts</string>
    <string name="shortcut_created">Shortcut added to homescreen</string>
    <string name="root">Root</string>
    <string name="cut">Cut</string>
    <string name="paste_here">Paste here</string>
    <string name="objects_cut_to_clipboard">Objects cut to clipboard</string>
    <string name="files_pasted">Files pasted</string>
    <string name="clipboard_is_empty">Clipboard is empty</string>
    <string name="refresh">Refresh</string>
    <string name="copy">Copy</string>
    <string name="objects_copied_to_clipboard">Objects copied to clipboard</string>
    <string name="create_folder">Create folder</string>
    <string name="create">Create</string>
    <string name="folder_created_successfully">Folder created successfully</string>
    <string name="loading_">Loading…</string>
    <string name="folder_could_not_be_created">Folder could not be created</string>
    <string name="pasting_files_">Pasting files…</string>
    <string name="downloads">Downloads</string>
    <string name="music">Music</string>
    <string name="pictures">Pictures</string>
    <string name="movies">Movies</string>
    <string name="dcim">DCIM</string>
    <string name="credits">App developed by Michal Dabski www.michaldabski.com
        \n
        \n
        In-app icons from www.iconsdb.com</string>
    <string name="app_icon">App icon</string>
    <string name="up">Up</string>
    <string name="error">Error</string>
    <string name="rename_file">Rename file</string>
    <string name="rename_folder">Rename folder</string>
    <string name="file_renamed">File renamed</string>
    <string name="file_could_not_be_renamed_to_s">File could not be renamed to %s</string>
    <string name="photos">Photos</string>
    <string name="add_favourite">Add favourite</string>
    <string name="other_apps">Other apps</string>
    <string name="feedback">Feedback</string>
    <string name="file_info">File info</string>
    <string name="mime_type_s">MIME Type: %s</string>
    <string name="label_advertisingStatus">Advertising Status</string>
    <string name="status_advertising">Advertising</string>
    <string name="status_notAdvertising">Not Advertising</string>
    <string name="status_advDataTooLarge">Not Advertising. Advertisement is larger than 31 bytes.</string>
    <string name="status_advFeatureUnsupported">Not Advertising. Advertising not supported.</string>
    <string name="status_advInternalError">Not Advertising. Internal error occurred.</string>
    <string name="status_advTooManyAdvertisers">Not Advertising. No advertising instance is available.</string>
    <string name="status_errorWhenConnecting">An error occurred when connecting to a device. Error Code</string>
    <string name="status_noLeAdv">BLE Advertising function is not supported.</string>
    <string name="update">Update</string>
    <string name="stop_advertising">Stop advertising</string>
    <string name="please_enable_bluetooth">Please enable bluetooth</string>
    <string name="ble_start_advertising">BLE Advertising started.</string>
    <string name="cpu_temperature" format="false">CPU temperature: %.1f°C</string>
    <string name="some_text">The next word is <font fgcolor="red">red</font> but that is all</string>
        <string name="AboutUs"><font fgcolor="blue">Who we are?\n</font>Wewe Media has been in the mobile industry since its infancy stage and we have evolved from purely a performance marketing agency to a network with
            over 20+ partners, serving up millions of ads impressions daily, providing quality conversions and leads for our valued partners in the mobile space and most recently, enhancing Android performance through our latest revolutionary Android booster MoBoost! \n\n
          <font color="blue">What is MoBoost?\n</font>Moboost aims to become the top Android booster and help each Android phone maximise its lifespan and unlock its full potential!\n\n

Moboost revolutionary technology helps boost your Android’s performance in the following way:\n
&#8226; <font fgcolor="blue"> Battery Saving</font> – Make your Android last longer with each charge.\n
&#8226; <font fgcolor="blue"> Storage Sorting</font> – Categorise your files and remove redundent files to save additional storage space.\n
&#8226;<font fgcolor="blue">  Photo Manager </font>– Organise, and backup your photos in a click.\n
&#8226; <font fgcolor="blue"> Moboost House</font> – Recommend the hottest Android apps and games in the Google Playstore now.\n
&#8226; <font fgcolor="blue"> App Protector</font>– Choose to select apps where you do not want anyone else to access. We help you protect your valuable information.\n
&#8226; <font fgcolor="blue"> Speed Booster </font>– Speed up your processor speed to surf the net and optimizes your apps faster. &#032; faster\n

    </string>
    <string name="app_protect_ques1"><b> Step 1: </b> From the App Protect main page, select the required pattern code to unlock your locked apps.\n
<b>Step 2: </b> Under the allow access button, allow moboost to protect your apps\n

<b>Step 3: </b> Select the apps you want to protect and you are good to go!\n\n Once that is activated, whenever you want to enter the protected app, you have to key in the pattern code.</string>
    <string name="apps_list_header_title">Device memory</string>
    <string name="apps_list_header_used_prefix">Used</string>
    <string name="apps_list_header_cache_prefix">Cache</string>
    <string name="apps_list_header_free_prefix">Free</string>
    <string name="apps_list_header_footer">App cache usage</string>
</resources>