<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/background_1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:ellipsize="marquee"
        android:gravity="start|center_vertical"
        android:singleLine="true"
        android:text="@string/apps_list_header_title"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        android:textStyle="normal"
        android:textColor="#ffffff" />

    <org.twinone.util.LinearColorBar
        android:id="@+id/color_bar"
        android:layout_width="match_parent"
        android:layout_height="16sp"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32sp"
        android:layout_marginTop="8sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16sp"
            android:layout_height="16sp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@color/apps_list_system_memory" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="1dp"
                android:layout_marginStart="16dp"
                android:maxLines="1"
                android:text="@string/apps_list_header_used_prefix"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#ffffff" />

            <include layout="@layout/dotted_line" />

            <TextView
                android:id="@+id/systemSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginStart="1dp"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16sp"
            android:layout_height="16sp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@color/apps_list_cache_memory" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="1dp"
                android:layout_marginStart="16dp"
                android:maxLines="1"
                android:text="@string/apps_list_header_cache_prefix"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#ffffff"/>

            <include layout="@layout/dotted_line" />

            <TextView
                android:id="@+id/cacheSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginStart="1dp"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16sp"
            android:layout_height="16sp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@color/apps_list_free_memory" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="1dp"
                android:layout_marginStart="16dp"
                android:maxLines="1"
                android:text="@string/apps_list_header_free_prefix"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#ffffff" />

            <include layout="@layout/dotted_line" />

            <TextView
                android:id="@+id/freeSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginStart="1dp"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8sp"
        android:ellipsize="marquee"
        android:gravity="start|center_vertical"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:text="@string/apps_list_header_footer"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        android:textStyle="normal"
        android:textColor="?attr/colorAccent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:gravity="start|center_vertical"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:visibility="gone"
        android:text="Clear Cache"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        android:textStyle="normal"
        android:textColor="?attr/colorAccent" />




</LinearLayout>
